create main containers for ld

--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,17 @@ li {
   text-decoration: none;
 }
 
+.test-box1{
+  background-color: aqua;
+}
+
+.test-box2{
+  background-color: brown;
+}
+
+.test-box3{
+  background-color: pink;
+}
 @media only screen and (max-width: 991px) {
   
   .header-container {
