--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ a {
   color: #000;
 }
 
+p {
+  line-height: 1;
+}
+
 .header-container {
   position: static;
   background-color: #F72210;
@@ -149,6 +153,16 @@ h2 {
 .border-news {
   border-bottom: 1px solid #DDDDDD;
 }
+
+
+
+.fs-hover a:hover {
+  color: #F72210;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+
 
 @media only screen and (max-width: 991px) {
   
