--- a/assets/style.css
+++ b/assets/style.css
@@ -196,9 +196,31 @@ font-size: 14px;
 transform: translate(-50%, -50%);
 }
 
+.icon-n {
+  -webkit-flex: none;
+  flex: none;
+  display: block;
+  width: 29px;
+  height: 28px;
+  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain no-repeat #f72210;
+  margin-right: 5px;
+}
 
+.signup-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.more-stories2 img  {
+  object-fit: cover;
+  object-position: center center;
+}
 
 @media only screen and (max-width: 991px) {
+
+  main {
+    margin: auto;
+  }
   
   .header-container {
     height: 45px;
